// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - Modal:  should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-animation-delay: 250ms;
  animation-delay: 250ms;
}

.c0 > div:first-child {
  position: fixed;
}

.c0.c0 > div:first-child {
  background: rgba(0,0,0,0.5);
}

@media (min-width:768px) {
  .c0 > div:first-child {
    top: 2.75rem !important;
  }
}

@media (min-width:1024px) {
  .c0 > div:first-child {
    top: 2.75rem !important;
  }
}

<div
    class="c0"
    data-testid="modal"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div>
       fake 
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Components - Modal:  should match the snapshot when hideBackdrop is true 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-animation-delay: 250ms;
  animation-delay: 250ms;
}

.c0 > div:first-child {
  position: fixed;
}

.c0.c0 > div:first-child {
  background: rgba(0,0,0,0.5);
}

@media (min-width:768px) {
  .c0 > div:first-child {
    top: 2.75rem !important;
  }
}

@media (min-width:1024px) {
  .c0 > div:first-child {
    top: 2.75rem !important;
  }
}

<div
    class="c0"
    data-testid="modal"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div>
       fake 
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;
